@@ -20,5 +20,6 @@
 - fixed: Startordner = Serien werden NICHT gelistet (Mediathek-URL verändert)
 - fixed: Serien- und Episodenbilder werden NICHT angezeigt (URL der Bilder verändert)
 
-[B]Version 3.0.4  (17.11.2019)[/B] by realvito[CR]
+[B]Version 3.0.4+3.0.5  (17.11.2019)[/B] by realvito[CR]
 - fixed: Bei Einstellung = alle Episoden einer Staffel in einem Ordner anzeigen - werden nur max. 56 Episoden gelistet
+- fixed: Übersetzungsfehler für Cacheeinstellung in Sprachfile
